增加邮箱方式找回密码

--- a/src/main/resources/templates/findpassword.html
+++ b/src/main/resources/templates/findpassword.html
@@ -88,20 +88,27 @@
             var obj = $("#el-code-button");
             var span = obj.children();
             var phone = $(".modifyAccount").val();
+            var regExp = /^1(3|4|5|6|7|8|9)\d{9}$/;
+            if(!phone){
+                $(".el-code").next().html("请输入手机号");
+            }else if(regExp.test(phone) == false){
+                $(".el-code").next().html("请输入正确的手机号");
+            }else {
                 $.ajax({
-                    type:"post",
-                    url:"/getCode/"+value,
-                    contentType:"application/json",
+                    type: "post",
+                    url: "/getCode/" + value,
+                    contentType: "application/json",
                     data: phone,
-                    success:function (result) {
-                        if(result.code == 200){
-                            settime(obj,span);
-                        }else{
+                    success: function (result) {
+                        if (result.code == 200) {
+                            settime(obj, span);
+                        } else {
                             $(".el-code").next().html(result.message);
                         }
                     },
-                    dataType:"json"
+                    dataType: "json"
                 });
+            }
         }
 
         function settime(obj,span) { //发送验证码倒计时
@@ -118,6 +125,35 @@
             setTimeout(function(){
                 settime(obj,span);
             },1000)
+        }
+
+        function getEmailCode(value) {
+            var obj = $("#el-code-button");
+            var span = obj.children();
+            var email = $(".modifyAccount").val();
+            var regExp = /^[A-Za-z0-9]+([-_\.][A-Za-z0-9]+)*@([A-Za-z0-9]+\.)+[a-z]{2,3}$/;
+            if(!email){
+                $(".el-code").next().html("请输入邮箱号");
+            }else if(regExp.test(email) == false){
+                $(".el-code").next().html("请换用qq,163邮箱等常用公共邮件服务");
+            }else{
+                $.ajax({
+                    type:"post",
+                    url:"/getEmailCode/" + value,
+                    contentType:"application/json",
+                    data:JSON.stringify({
+                        "email":email
+                    }),
+                    success:function (result) {
+                        if(result.code == 200){
+                            settime(obj,span);
+                        }else{
+                            $(".el-code").next().html(result.message);
+                        }
+                    },
+                    dataType:"json"
+                });
+            }
         }
 
         function checkAccount() {
@@ -142,7 +178,7 @@
                                 $(".modifyAccount").val(account);
                             }else{
                                 $(".findpwd-b h3").html("邮箱："+account);
-                                $(".el-code-button").attr("onclick","getEmailCode()");
+                                $(".el-code-button").attr("onclick","getEmailCode(1)");
                                 $(".modifyAccount").val(account);
                             }
                         }else{
@@ -159,8 +195,6 @@
             var newPwd = $("#newPwd").val();
             var modifyAccount = $(".modifyAccount").val();
             var code = $("#code").val();
-            layui.use('layer', function(){
-                var layer = layui.layer;
                 if(checkPwd == true){
                     $.ajax({
                         type:"post",
@@ -181,7 +215,6 @@
                         dataType:"json"
                     });
                 }
-            });
         }
     </script>
 </head>
