--- a/src/main/resources/templates/findpassword.html
+++ b/src/main/resources/templates/findpassword.html
@@ -9,6 +9,79 @@
     <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
     <script th:src="@{/layui/layui.js}" type="application/javascript"></script>
     <script type="application/javascript">
+        window.onload=function () {
+            $(".autocomplete ul li").each(function () {
+                $(this).bind({
+                    click:function () {
+                        $("#account").val($(this).text());
+                        $(".on").removeClass("on");
+                        $(this).addClass("on");
+                        $(".autocomplete").addClass("layui-hide");
+                    },
+                    mouseover:function () {
+                        $(this).addClass("mouseoverTarget");
+                    },
+                    mouseout:function () {
+                        $(this).removeClass("mouseoverTarget");
+                    }
+                });
+            });
+
+            $("#account").on("keydown", function (e) {
+                if(!$(".autocomplete").hasClass("layui-hide")){
+                    if(e.keyCode == 38){
+                        var size = $(".on").prevAll("li[class!='layui-hide']").length;
+                        if(size > 0){
+                            $(".on").prevAll("li[class!='layui-hide']:first").addClass("on");
+                            $(".on:last").removeClass("on");
+                        }else{
+                            $(".on:first").removeClass("on");
+                            $(".autocomplete li[class!='layui-hide']:last").addClass("on");
+                        }
+                    }else if (e.keyCode == 40){
+                        var size = $(".on").nextAll("li[class!='layui-hide']").length;
+                        if(size > 0){
+                            $(".on").nextAll("li[class!='layui-hide']:first").addClass("on");
+                            $(".on:first").removeClass("on");
+                        }else{
+                            $(".on:last").removeClass("on");
+                            $(".autocomplete li[class!='layui-hide']:first").addClass("on");
+                        }
+                    }else if(e.keyCode == 13){
+                        $("#account").val($(".on").text());
+                        $(".autocomplete").addClass("layui-hide");
+                    }
+                }
+            });
+
+            $("#account").on("keyup", function (e) {
+                var account = $("#account").val();
+                if(account.indexOf('@') != 0 && account.indexOf('@') != -1 && e.keyCode != 13 && e.keyCode != 38 && e.keyCode != 40){
+                    var prefix = account.split("@")[0];
+                    var aa = account.split("@")[1];
+                    $(".autocomplete ul li").each(function () {
+                        var suffix = $(this).text();
+                        var suffix2 = suffix.split("@")[1];
+                        if(suffix2.indexOf(aa) != -1){
+                            $(this).text(prefix + '@' + suffix2);
+                            $(this).removeClass("layui-hide");
+                        }else{
+                            $(this).addClass("layui-hide");
+                        }
+                    });
+                    $(".on").removeClass("on");
+                    $(".autocomplete li[class!='layui-hide']:first").addClass("on");
+                    if($(".autocomplete li[class!='layui-hide']").length != 0){
+                        $(".autocomplete").removeClass("layui-hide");
+                    }else{
+                        $(".autocomplete").addClass("layui-hide");
+                    }
+                }else if(e.keyCode != 38 && e.keyCode != 40){
+                    $(".autocomplete").addClass("layui-hide");
+                }
+            });
+        };
+
         layui.use('element',function () {
             var element = layui.element;
         });
@@ -223,16 +296,27 @@
 <div class="layui-container tree-marginTop" style="background: white">
     <div class="layui-row">
         <div class="register-main">
-            <div class="findpwd-top">
-                <span><a th:href="@{/login}">登录</a></span>
-                <span class="layui-icon layui-icon-right findpwd-top-icon"></span>
-                <span style="color: #606266;">忘记密码</span>
+            <div class="title-line">
+                <span class="tit">忘记密码</span>
             </div>
-            <div class="register-container">
+            <div class="register-container" style="padding-top: 60px;padding-bottom: 150px;">
                 <div class="findpwd-a">
-                    <div>
+                    <div class="form-group" style="position: relative;">
                         <input type="text" class="el-input" id="account" name="account" placeholder="请输入绑定的手机号/邮箱" autocomplete="off">
                         <p class="error-message"></p>
+                        <div class="autocomplete layui-hide" style="top: 48px;">
+                            <ul>
+                                <li class="on">@qq.com</li>
+                                <li>@163.com</li>
+                                <li>@126.com</li>
+                                <li>@gmail.com</li>
+                                <li>@foxmail.com</li>
+                                <li>@sina.com</li>
+                                <li>@yeah.net</li>
+                                <li>@sohu.com</li>
+                                <li>@outlook.com</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="form-group">
                         <button type="button" class="el-button--primary" onclick="checkAccount()"><span>确认</span></button>
