--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -228,7 +228,7 @@
                                     <i class="iconfont icon-liulan"></i><span th:text="${question.viewCount}"></span>
                                 </span>
                                 <span class="tree-list-like layui-hide-xs" title="收藏">
-                                    <i class="layui-icon layui-icon-star"></i><span>0</span>
+                                    <i class="layui-icon layui-icon-star"></i><span th:text="${question.collectionCount}"></span>
                                 </span>
                                 <span class="tree-list-nums">
                                     <i class="iconfont icon-pinglun1" title="回复"></i><span th:text="${question.commentCount}"></span>
