--- a/src/main/resources/templates/navTwo.html
+++ b/src/main/resources/templates/navTwo.html
@@ -21,7 +21,7 @@
                 <a href="/user/profile/questions">我发表的贴</a>
             </li>
             <li class="layui-hide-xs layui-hide-sm layui-show-md-inline-block" th:if="${session.user!=null}">
-                <a href="/user/profile/questions">我收藏的贴</a>
+                <a href="/user/profile/bookMark">我收藏的贴</a>
             </li>
             <input type="text" th:value="${type}" class="nav-type layui-hide">
         </ul>
