--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -35,6 +35,7 @@
                     <dd><a th:href="${'/user/'+session.user.id}"><i class="layui-icon layui-icon-home"></i>我的主页</a></dd>
                     <hr style="margin: 5px 0;">
                     <dd><a href="/user/profile/questions"><i class="layui-icon layui-icon-tabs"></i>帖子管理</a></dd>
+                    <dd><a href="/user/profile/bookMark"><i class="layui-icon layui-icon-rate"></i>收藏管理</a></dd>
                     <dd><a href="/user/set/account"><i class="layui-icon layui-icon-friends"></i>账户中心</a></dd>
                     <dd><a href="/user/set/info"><i class="layui-icon layui-icon-set-sm"></i>基本设置</a></dd>
                     <hr style="margin: 5px 0;">
